# freeysh

./: README  freeysh.sh  gen-cmd  systemd
Configure/Crontab/: crontab
Configure/Environment/MCU/: embedded
Configure/Environment/TMUX/: README
Configure/Environment/VIM/: README  vimrc
Configure/Install/: emerge  pacman
Configure/InstallSoftware/debian/: aptitude
Configure/Network/Bluetooth/: bluetooth
Configure/Network/DHCP/: dhcp
Configure/Network/IP/: ip
Configure/Network/SSH/: debian_ssh  ssh
Configure/Network/WI_FI/: wireless_tools
Configure/Network/virtualbox/: virtualbox
Configure/Security/Cryptsetup/: cryptsetup
Configure/Security/GnuPG/: gnupg
Configure/System/: UEFI
Configure/System/ArchLlinux/: archlinux  archlinux_install
Configure/System/Debian/: apt-dpkg  debian.cfg  runlevel
Configure/System/Soft-Install/: Synaptic-Package-Manager  apt-get
Configure/System/gentoo/: gentoo_fdisk  gentoo_parted
Configure/Utilities/SoftwareUpdate/: conf
Configure/Utilities/automake/: README  automake
Configure/Utilities/automake/AutoMake/Demo/: Makefile.am
Configure/Utilities/automake/AutoMake/Demo/include/: Makefile  sub.h
Configure/Utilities/automake/AutoMake/Demo/src/: sum.c
Configure/Utilities/cmus/: cmus
Configure/Utilities/dia/: dia
Configure/Utilities/gedit/: gedit
Configure/Utilities/git/: git
Configure/Utilities/gnome/: desktop  gnome
Crond/: crontab
Developer/: README
Developer/ASM/: stm32
Developer/BASH/: README
Developer/CMAKE/: README  syntax
Developer/CMAKE/Demo3/: CMakeLists.txt
Developer/CXX/: README
Developer/GCC/: gcc  gcc.sh
Developer/GDB/: README  gdb
Developer/PYTHON/: syntax
Developer/SDCC/: mcs8051_conf  sdcc
ENV/: README
ENV/CMUS/: rc
ENV/TMUX/: tmux.conf
Embedded/: embedded_conf
Embedded/eclipse/: README
Embedded/stlink/: stlink
FHS/: bash  fhs
Network/DHCP/: dhcp
Network/FileServer/: README
Network/IP/: ip
Network/NTP/: ntp
Network/Putty/: putty
Network/WI_FI/: debian.net  wifi.conf  wpa_supplicant
Security/Disk_Encryption_Tool/: LUKS  cryptsetup  dm_crypt
Security/GnuPG/: PGP
Security/PGP/: Encryption
Security/SSH/: genkey
Security/password/: passwd
Software/gentoo/: use
System/: GRUB
System/ArchLlinux/: Installation_guide  archlinux_install
System/Raspberry-Pi/: Pi-Install
System/Systemd/: system_mgr  systemd_tools
System/Ubuntu/: ubuntu_18_04
System/boot_grub/: grub
System/gentoo/: portage
System/ysh_boot/: networks
UNIX/FHS/: fhs
UNIX/LINUX/: Pipeline管道  Stream流  Z_EOF  Z_RE  install  redirect重定向
UNIX/文件系统/: 文件系统的存储结构  硬链接  符号连接
UNIX/正则表达式/: 2  元字符和集合  流编辑sed  组合与锚点  行筛选grep
UNIX/系统状态/: Linux的字符终端  系统状态
UNIX/系统调用/: 访问i节点和目录
Utilities/: README
Utilities/cmus/: cmus  cmus.conf
Utilities/gedit/: gedit
Utilities/git/: git
Utilities/ranger/: Ranger
Utilities/terminal/: conf  shortcuts
Word/: linux  system
Word/ECLIPSE/: eclipse
Word/GNOME/: gnome  termial
Word/PYCHARM/: pycharm
Word/STM32/: README  cortex
Word/WU_BI/: coding  wubi
Workbench/WORKSPACE/: README
Workbench/__cmake/example/A/: CMakeLists.txt
(+481 files in other folders)
